overflow fixing

--- a/src/TestApp.css
+++ b/src/TestApp.css
@@ -4,12 +4,18 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  max-width: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
     :root {
       scroll-behavior: smooth;
     }
+}
+html, body{
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
 }
 
 body {
